src/test/minic/success/test30.block
test30 {
   // No error: initializing an integer array variable with a statically created array
   int p[] = { 3, 4};
}