src/test/minic/error/test31.block
test31 {
   // Type error: initialization of an integer array type variable with a dynamically created array
   int p[] = new int[2];
   p = { 3, true};
}